package main

import (
	"encoding/json"
	"log"
	"os"
	"os/signal"
	"syscall"
	"time"

	"voice-gateway/internal/bus"
	"voice-gateway/internal/config"
)

// TranscriptMessage represents a transcript result
type TranscriptMessage struct {
	SessionID  string    `json:"session_id"`
	Text       string    `json:"text"`
	IsFinal    bool      `json:"is_final"`
	Confidence float64   `json:"confidence"`
	Timestamp  time.Time `json:"timestamp"`
}

func main() {
	log.Println("Starting ASR Worker (stub implementation)...")

	cfg := config.Load()

	// Connect to NATS
	busClient, err := bus.NewClient(cfg.NATS.URL)
	if err != nil {
		log.Fatalf("Failed to connect to NATS: %v", err)
	}
	defer busClient.Close()

	log.Println("ASR Worker connected to NATS")
	log.Println("Note: This is a STUB implementation that simulates ASR")
	log.Println("Replace with real ASR service (Whisper, Google STT, etc.)")

	// In a real implementation, you would:
	// 1. Subscribe to audio frames from NATS
	// 2. Send them to an actual ASR service
	// 3. Publish transcripts back to NATS
	//
	// For now, this is a placeholder that demonstrates the pattern

	// Example: Subscribe to audio and generate fake transcripts
	log.Println("Waiting for audio frames...")

	// This is where you would integrate with real ASR
	// For example:
	// - Deepgram streaming API
	// - AssemblyAI real-time transcription
	// - Whisper via gRPC
	// - Google Cloud Speech-to-Text
	// - Azure Speech Service

	// Simulate processing (in reality, this would subscribe to AUDIO stream)
	// busClient.SubscribeAudio("*", func(msg *bus.Message) {
	//     // Process audio chunk
	//     // Send to ASR service
	//     // Publish transcript
	// })

	log.Println("ASR Worker ready (stub mode)")
	log.Println("To implement real ASR:")
	log.Println("  1. Subscribe to voice.audio.* subject")
	log.Println("  2. Buffer audio chunks (20-40ms frames)")
	log.Println("  3. Send to ASR service via gRPC/HTTP")
	log.Println("  4. Publish transcripts to voice.text.* subject")

	// Wait for interrupt
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
	<-sigChan

	log.Println("ASR Worker shutting down...")
}

// Example ASR integration function (to be implemented)
func processAudioChunk(sessionID string, audioData []byte, busClient *bus.Client) error {
	// TODO: Implement real ASR here
	// This is where you would:
	// 1. Send audioData to your ASR service
	// 2. Get transcript result
	// 3. Publish to NATS

	// Stub example:
	transcript := TranscriptMessage{
		SessionID:  sessionID,
		Text:       "[Simulated transcript]",
		IsFinal:    false,
		Confidence: 0.95,
		Timestamp:  time.Now(),
	}

	data, err := json.Marshal(transcript)
	if err != nil {
		return err
	}

	return busClient.PublishText(sessionID, data)
}

// Example real ASR integration patterns:
//
// 1. Deepgram:
//    - WebSocket connection to Deepgram streaming API
//    - Send audio chunks as they arrive
//    - Receive interim and final transcripts
//
// 2. Whisper (via gRPC):
//    - Start gRPC stream to Whisper server
//    - Send audio chunks
//    - Receive transcripts with timestamps
//
// 3. AssemblyAI:
//    - Create WebSocket connection
//    - Stream audio chunks
//    - Process partial and final transcripts
//
// Example structure:
//
// type ASRClient interface {
//     StreamRecognize(ctx context.Context, audio <-chan []byte) (<-chan Transcript, error)
// }
//
// type Transcript struct {
//     Text       string
//     IsFinal    bool
//     Confidence float64
//     Words      []Word
// }
